force-app/main/default/objects/Activity/fields/Activity_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Activity_Age_Days__c</fullName>
    <formula>IF(IsClosed,  CompletedDateTime - CreatedDate, TODAY() -  DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>