force-app/main/default/objects/Activity/fields/Activity_Type_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type_for_Reporting__c</fullName>
    <description>The Activity Type field is not available in Custom Reports types (shame on you Salesforce!).  The workaround is to have a workflow populate this new custom field that can be included in the creation of custom report types</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Type for Reporting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>