force-app/main/default/objects/Activity/fields/Approved_First_Bankcard_POS_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Approved_First_Bankcard_POS_Displayed__c</fullName>
    <label>Approved POS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>