force-app/main/default/objects/Activity/fields/Assigned_Market__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Market__c</fullName>
    <formula>TEXT(Owner:User.User_s_Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Market</label>
    <type>Text</type>
</CustomField>