force-app/main/default/objects/Activity/fields/CAP_Exception__c.field-meta.xml
<CustomField>
    <fullName>CAP_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the Business Monitoring task process to identify a specific error type</description>
    <label>CAP Exception</label>
    <type>Checkbox</type>
</CustomField>