force-app/main/default/objects/Activity/fields/Completed_Date_Weekday__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_Weekday__c</fullName>
    <formula>TEXT(WEEKDAY(DATEVALUE(CompletedDateTime )))&amp;&quot; &quot;&amp;CASE(WEEKDAY(DATEVALUE(CompletedDateTime )), 1, &quot;Sunday&quot;, 2, &quot;Monday&quot;,3, &quot;Tuesday&quot;,4, &quot;Wednesday&quot;,5, &quot;Thursday&quot;, 6, &quot;Friday&quot;, 7, &quot;Saturday&quot;, &quot; &quot;)</formula>
    <label>Completed Date (Weekday)</label>
    <type>Text</type>
</CustomField>