force-app/main/default/objects/Activity/fields/Compliance_Category__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Category__c</fullName>
    <description>Used to categorize compliance tasks used by Business Monitoring</description>
    <label>Compliance Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint Intent</fullName>
            </value>
            <value>
                <fullName>Appraisal Notice Disclosure</fullName>
            </value>
            <value>
                <fullName>Adverse Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>