force-app/main/default/objects/Activity/fields/Compliance_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Sub_Category__c</fullName>
    <description>Used to categorize compliance tasks used by Business Monitoring</description>
    <label>Compliance Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Compliance_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Form not in FirstWork</fullName>
            </value>
            <value>
                <fullName>Incorrect application date</fullName>
            </value>
            <value>
                <fullName>Incorrect joint intent date for co-borrower/guarantors</fullName>
            </value>
            <value>
                <fullName>Co-borrower not listed on form</fullName>
            </value>
            <value>
                <fullName>Guarantor not listed on form</fullName>
            </value>
            <value>
                <fullName>Co-borrower listed as guarantor</fullName>
            </value>
            <value>
                <fullName>Guarantor listed as co-borrower</fullName>
            </value>
            <value>
                <fullName>Incorrect ownership percentage listed for guarantor</fullName>
            </value>
            <value>
                <fullName>Disclosure not in FirstWork</fullName>
            </value>
            <value>
                <fullName>Disclosure not addressed to primary borrower</fullName>
            </value>
            <value>
                <fullName>Disclosure sent outside of three day window</fullName>
            </value>
            <value>
                <fullName>Reason for withdrawal not listed</fullName>
            </value>
            <value>
                <fullName>Date of withdrawal not listed</fullName>
            </value>
            <value>
                <fullName>Reason and date of withdrawal not listed</fullName>
            </value>
            <value>
                <fullName>Loan should have been denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>