force-app/main/default/objects/Activity/fields/Create_awareness_of_current_Op_Regs__c.field-meta.xml
<CustomField>
    <fullName>Create_awareness_of_current_Op_Regs__c</fullName>
    <label>Bank Op Regs Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>