force-app/main/default/objects/Activity/fields/Customer_Offers_and_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Customer_Offers_and_Incentives__c</fullName>
    <label>Customer Offers and Incentives</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>