force-app/main/default/objects/Activity/fields/Date_Weekday__c.field-meta.xml
<CustomField>
    <fullName>Date_Weekday__c</fullName>
    <formula>TEXT(WEEKDAY(ActivityDate))&amp;&quot; &quot;&amp;CASE(WEEKDAY(ActivityDate), 1, &quot;Sunday&quot;, 2, &quot;Monday&quot;,3, &quot;Tuesday&quot;,4, &quot;Wednesday&quot;,5, &quot;Thursday&quot;, 6, &quot;Friday&quot;, 7, &quot;Saturday&quot;, &quot; &quot;)</formula>
    <label>Date (Weekday)</label>
    <type>Text</type>
</CustomField>