force-app/main/default/objects/Activity/fields/Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due__c</fullName>
    <formula>IF(NOT(ISPICKVAL(Status, &quot;Completed&quot;)), TODAY() - ActivityDate, NULL)</formula>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>