force-app/main/default/objects/Activity/fields/Departments_Visited__c.field-meta.xml
<CustomField>
    <fullName>Departments_Visited__c</fullName>
    <label>Departments Visited</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer Principal</fullName>
                <label>Dealer Principal/GM</label>
            </value>
            <value>
                <fullName>Cashier</fullName>
            </value>
            <value>
                <fullName>F&amp;I</fullName>
                <label>F&amp;I Business Office</label>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
                <label>Parts/Accessories</label>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Body Shop/Collision Center</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
                <isActive>false</isActive>
                <label>General Manager</label>
            </value>
            <value>
                <fullName>General Office</fullName>
                <isActive>false</isActive>
                <label>General Office</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>