force-app/main/default/objects/Activity/fields/Event_Completed__c.field-meta.xml
<CustomField>
    <fullName>Event_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Completed</label>
    <type>Checkbox</type>
</CustomField>