force-app/main/default/objects/Activity/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the Business Monitoring task process to identify a specific error type</description>
    <label>Extension</label>
    <type>Checkbox</type>
</CustomField>