force-app/main/default/objects/Activity/fields/Failed_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Failed_to_Complete__c</fullName>
    <formula>IF( Days_Past_Due__c &gt; 6, TRUE, FALSE )</formula>
    <label>Failed to Complete</label>
    <type>Checkbox</type>
</CustomField>