force-app/main/default/objects/Activity/fields/FAW_No_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>FAW_No_of_Attendees__c</fullName>
    <inlineHelpText>Enter the number of attendees, if applicable.</inlineHelpText>
    <label>FAW - No. of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>