force-app/main/default/objects/Activity/fields/FAW_Presenter__c.field-meta.xml
<CustomField>
    <fullName>FAW_Presenter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the name of the Presenter, if applicable</inlineHelpText>
    <label>FAW - Presenter</label>
    <length>40</length>
    <type>Text</type>
</CustomField>