force-app/main/default/objects/Activity/fields/FAW_Subj_Detail__c.field-meta.xml
<CustomField>
    <fullName>FAW_Subj_Detail__c</fullName>
    <inlineHelpText>Select the appropriate subject detail, if applicable</inlineHelpText>
    <label>FAW Subj Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FAW_Subject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Careers</fullName>
            </value>
            <value>
                <fullName>Credit Scoring</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Estate Planning</fullName>
            </value>
            <value>
                <fullName>Financial Planning Basics</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Health Saving Accounts</fullName>
            </value>
            <value>
                <fullName>Home Buying</fullName>
            </value>
            <value>
                <fullName>Home Refinancing</fullName>
            </value>
            <value>
                <fullName>Identity Theft</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Investing 101</fullName>
            </value>
            <value>
                <fullName>Local Event</fullName>
            </value>
            <value>
                <fullName>NEST</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Retirement Basics</fullName>
            </value>
            <value>
                <fullName>Retirement Income Strategy</fullName>
            </value>
            <value>
                <fullName>Saving &amp; Budgeting</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Sprouting Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>