force-app/main/default/objects/Activity/fields/FAW_Subject__c.field-meta.xml
<CustomField>
    <fullName>FAW_Subject__c</fullName>
    <description>Use this picklist to specify the FAW Subject.</description>
    <inlineHelpText>Use this picklist to specify the FAW Subject.</inlineHelpText>
    <label>FAW Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benefit Fair</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Financial Education</fullName>
            </value>
            <value>
                <fullName>Kids Banking</fullName>
            </value>
            <value>
                <fullName>Meet &amp; Greet</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Sale Call</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>