force-app/main/default/objects/Activity/fields/Initial_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Initial_Call_Outcome__c</fullName>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Retail_Call_Outcome</valueSetName>
    </valueSet>
</CustomField>