force-app/main/default/objects/Activity/fields/Is_Follow_Up_Task__c.field-meta.xml
<CustomField>
    <fullName>Is_Follow_Up_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the Mortgage Refi process to determine the proper &#39;failed to complete&#39; timeframe</description>
    <label>Is Follow Up Task</label>
    <type>Checkbox</type>
</CustomField>