force-app/main/default/objects/Activity/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>The internal market used to organize Business Monitoring tasks</description>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agribusiness/Co-Banking</fullName>
            </value>
            <value>
                <fullName>Colorado Commercial</fullName>
            </value>
            <value>
                <fullName>Commercial Real Estate</fullName>
            </value>
            <value>
                <fullName>Corporate Treasury Services (CTS)</fullName>
            </value>
            <value>
                <fullName>Specialty Banking</fullName>
            </value>
            <value>
                <fullName>Commercial - Hansen</fullName>
            </value>
            <value>
                <fullName>Commercial - Struthers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>