force-app/main/default/objects/Activity/fields/Onsite_Dealer_Compliance_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Dealer_Compliance_Review_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Notes/Next Steps/Follow-up</label>
    <type>TextArea</type>
</CustomField>