force-app/main/default/objects/Activity/fields/Owner_in_My_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Owner_in_My_Hierarchy__c</fullName>
    <formula>Owner:User.In_My_Manager_Hierarchy__c</formula>
    <label>Owner in My Hierarchy</label>
    <type>Checkbox</type>
</CustomField>