force-app/main/default/objects/Activity/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant</label>
    <length>200</length>
    <type>Text</type>
</CustomField>