force-app/main/default/objects/Activity/fields/Parts__c.field-meta.xml
<CustomField>
    <fullName>Parts__c</fullName>
    <label>Parts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Non-Compliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>