force-app/main/default/objects/Activity/fields/Payroll_Services__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Services</label>
    <type>Checkbox</type>
</CustomField>