force-app/main/default/objects/Activity/fields/POS_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>POS_Order_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POS Order Date</label>
    <type>Date</type>
</CustomField>