force-app/main/default/objects/Activity/fields/Power_of_One_Completed__c.field-meta.xml
<CustomField>
    <fullName>Power_of_One_Completed__c</fullName>
    <formula>IF( Text (Status) = &quot;Completed&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power of One Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>