force-app/main/default/objects/Activity/fields/Power_of_One_Failed_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Power_of_One_Failed_to_Complete__c</fullName>
    <formula>IF( Text (Status) = &quot;Failed to Complete&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power of One Failed to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>