force-app/main/default/objects/Activity/fields/Previous_Call_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Previous_Call_Outcomes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Call Outcomes</label>
    <type>TextArea</type>
</CustomField>