force-app/main/default/objects/Activity/fields/Procedural_Error__c.field-meta.xml
<CustomField>
    <fullName>Procedural_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the Business Monitoring task process to identify a specific error type</description>
    <label>Procedural Error</label>
    <type>Checkbox</type>
</CustomField>