force-app/main/default/objects/Activity/fields/Programs_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Programs_Discussed__c</fullName>
    <label>Programs Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
                <label>Consumer Card</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
                <label>Commercial Card</label>
            </value>
            <value>
                <fullName>Overall Engaged Dealer Activity</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Route One</fullName>
            </value>
            <value>
                <fullName>Kick-off/Launch</fullName>
            </value>
            <value>
                <fullName>Application Submission Goal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>