force-app/main/default/objects/Activity/fields/Prospect_Level__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Level__c</fullName>
    <inlineHelpText>Indicate the customer relationship at the time this activity is assigned</inlineHelpText>
    <label>Relationship Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect - Low</fullName>
            </value>
            <value>
                <fullName>Prospect - Medium</fullName>
            </value>
            <value>
                <fullName>Prospect - High</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>