force-app/main/default/objects/Activity/fields/Regulatory_Error__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track Compliance Task errors by Business Monitoring</description>
    <label>Regulatory Error</label>
    <type>Checkbox</type>
</CustomField>