force-app/main/default/objects/Activity/fields/Reinforce_Use_of_FCA_Fulfilment_Checklst__c.field-meta.xml
<CustomField>
    <fullName>Reinforce_Use_of_FCA_Fulfilment_Checklst__c</fullName>
    <label>FCA Checklist Guidelines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>