force-app/main/default/objects/Activity/fields/Related_Account_from_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_from_Contact__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account from Contact</label>
    <type>Text</type>
</CustomField>