force-app/main/default/objects/Activity/fields/Related_Acct_Lending_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Related_Acct_Lending_Relationship__c</fullName>
    <description>Used in a Process Builder flow to auto populate the Activity Prospect level field with the Current Lending Relationship field from the account page.  This only happens for users in the CBG profile.</description>
    <formula>TEXT( Account.Current_Lending_Relationship__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Acct Lending Relationship</label>
    <type>Text</type>
</CustomField>