force-app/main/default/objects/Activity/fields/Related_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the campaign object housing the link to the welcome letter</description>
    <label>Related Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>