force-app/main/default/objects/Activity/fields/Review_Current_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Current_Training_Status__c</fullName>
    <label>Current SID Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>