force-app/main/default/objects/Activity/fields/Review_Implications_of_DNA_Complaints__c.field-meta.xml
<CustomField>
    <fullName>Review_Implications_of_DNA_Complaints__c</fullName>
    <label>DNA Implications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>