force-app/main/default/objects/Activity/fields/SID_Incentive_Offers__c.field-meta.xml
<CustomField>
    <fullName>SID_Incentive_Offers__c</fullName>
    <label>SID Incentive Offers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>