force-app/main/default/objects/Activity/fields/Special_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Special_Assessment_Type__c</fullName>
    <description>Used to classify Special Assessment tasks used by Business Monitoring</description>
    <label>Special Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATM Owner/Operators</fullName>
            </value>
            <value>
                <fullName>Charitable Organizations</fullName>
            </value>
            <value>
                <fullName>Domestic Correspondent Banks</fullName>
            </value>
            <value>
                <fullName>Embassy/Consulates</fullName>
            </value>
            <value>
                <fullName>Grocery, Convenience, Liquor and Tobacco/Vapor Stores</fullName>
            </value>
            <value>
                <fullName>Jewelry Dealers, Pawnshops and Loan/Financing Companies</fullName>
            </value>
            <value>
                <fullName>Money Services Businesses (&quot;MSB&quot;)</fullName>
            </value>
            <value>
                <fullName>Agents of a Principal MSB</fullName>
            </value>
            <value>
                <fullName>Non-US Businesses/Organizations</fullName>
            </value>
            <value>
                <fullName>International Politically Exposed Persons (&quot;PEP&quot;)</fullName>
            </value>
            <value>
                <fullName>Domestic Politically Exposed Persons (&quot;PEP&quot;)</fullName>
            </value>
            <value>
                <fullName>Private Banking Customers as defined in the CIP and Due Diligence Policy</fullName>
            </value>
            <value>
                <fullName>Privately Held Casino/Gambling Establishments</fullName>
            </value>
            <value>
                <fullName>Securities and Commodity Firms</fullName>
            </value>
            <value>
                <fullName>Third Party Senders with a Processing Relationship</fullName>
            </value>
            <value>
                <fullName>Used Motor Vehicle Dealers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>