force-app/main/default/objects/Activity/fields/Sub_Market__c.field-meta.xml
<CustomField>
    <fullName>Sub_Market__c</fullName>
    <description>Used to categorize Business Monitoring tasks</description>
    <label>Sub Market</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fremont</fullName>
            </value>
            <value>
                <fullName>Lincoln</fullName>
            </value>
            <value>
                <fullName>Omaha</fullName>
            </value>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>Kearney</fullName>
            </value>
            <value>
                <fullName>North Platte</fullName>
            </value>
            <value>
                <fullName>South Dakota</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>