force-app/main/default/objects/Activity/fields/Task_Description__c.field-meta.xml
<CustomField>
    <fullName>Task_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Description</label>
    <type>TextArea</type>
</CustomField>