force-app/main/default/objects/Activity/fields/Task_Time_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Task_Time_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Time Trigger</label>
    <type>Checkbox</type>
</CustomField>