force-app/main/default/objects/Activity/fields/TASK_URL__c.field-meta.xml
<CustomField>
    <fullName>TASK_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TASK URL</label>
    <type>Url</type>
</CustomField>