force-app/main/default/objects/Activity/fields/Triggered_FLow__c.field-meta.xml
<CustomField>
    <fullName>Triggered_FLow__c</fullName>
    <label>Triggered Flow Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCNCW</fullName>
            </value>
            <value>
                <fullName>TXIND</fullName>
            </value>
            <value>
                <fullName>TXINC</fullName>
            </value>
            <value>
                <fullName>REFI19</fullName>
            </value>
            <value>
                <fullName>REF19</fullName>
                <isActive>false</isActive>
                <label>REF19</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>