force-app/main/default/objects/Activity/fields/User_Profile_for_Reporting_Activities__c.field-meta.xml
<CustomField>
    <fullName>User_Profile_for_Reporting_Activities__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <label>User Profile for Reporting - (Activities</label>
    <type>Text</type>
</CustomField>