force-app/main/default/objects/Activity/fields/User_Role_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>User_Role_for_Reporting__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Role - for Reporting</label>
    <type>Text</type>
</CustomField>