force-app/main/default/objects/Activity/fields/Website_Provider__c.field-meta.xml
<CustomField>
    <fullName>Website_Provider__c</fullName>
    <label>Website Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer.com</fullName>
            </value>
            <value>
                <fullName>Dealeron.com</fullName>
            </value>
            <value>
                <fullName>Vinsolutions.com</fullName>
            </value>
            <value>
                <fullName>Drivingforceauto.com</fullName>
            </value>
            <value>
                <fullName>Dealerfire.com</fullName>
            </value>
            <value>
                <fullName>Webstreak.com</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>